--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-	"name": "hire-me",
-	"version": "1.0.0",
-	"description": "School project. Web based recruitment portal",
-	"main": "app.js",
-	"scripts": {
-		"start": "node app.js",
-		"server": "nodemon app",
-		"client": "npm start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "Pedro Ogheneochuko",
-	"license": "ISC",
-	"dependencies": {
-		"@sendgrid/mail": "^7.1.0",
-		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.19.0",
-		"config": "^3.3.1",
-		"dotenv": "^8.2.0",
-		"express": "^4.17.1",
-		"express-validator": "^6.4.1",
-		"jsonwebtoken": "^8.5.1",
-		"lodash": "^4.17.19",
-		"mongoose": "^5.9.13",
-		"multer": "^1.4.2",
-		"nodemailer": "^6.4.6",
-		"nodemailer-sendgrid-transport": "^0.2.0",
-		"nodemon": "^2.0.3",
-		"pdfkit": "^0.11.0"
-	}
+  "name": "hire-me",
+  "version": "1.0.0",
+  "description": "School project. Web based recruitment portal",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "server": "nodemon app",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Pedro Ogheneochuko",
+  "license": "ISC",
+  "dependencies": {
+    "@sendgrid/mail": "^7.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "config": "^3.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
+    "mongoose": "^5.9.13",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "nodemon": "^2.0.3",
+    "pdfkit": "^0.11.0"
+  }
 }
