--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.4.6",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.3",
-    "pdfkit": "^0.11.0"
+    "pdfkit": "^0.11.0",
+    "string-similarity": "^4.0.4"
   }
 }
